--- a/laraapi/.env.example
+++ b/laraapi/.env.example
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -21,12 +21,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=79.174.131.197
+DB_PORT=3306
+DB_DATABASE=ID324796_ABJ
+DB_USERNAME=ID324796_ABJ
+DB_PASSWORD=7503121iY4823l49L1M0
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
