--- a/laraapi/composer.json
+++ b/laraapi/composer.json
@@ -9,7 +9,9 @@
         "php": "^8.2",
         "laravel/framework": "^11.31",
         "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^2.9"
+        "laravel/scout": "^10.11",
+        "laravel/tinker": "^2.9",
+        "meilisearch/meilisearch-php": "^1.12"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
