--- a/laraapi/.env
+++ b/laraapi/.env
@@ -68,3 +68,5 @@ VITE_APP_NAME="${APP_NAME}"
 SCOUT_DRIVER=meilisearch
 MEILISEARCH_HOST=http://localhost:7700
 MEILISEARCH_KEY=s6J4trhHpCRtJbedmQvqhdTDhNN_jHcSIw1o8TZ7f3M
+
+SCOUT_QUEUE=true
